--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "sass": "^1.80.4"
+    "sass": "^1.80.4",
+    "sonner": "^1.7.0"
   },
   "devDependencies": {
     "@types/node": "^20",
